# chat-machines-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
example/: discord_bot.py  fastapi_example.py  hangman.py
src/chatmachine/: __init__.py  core.py
